plugins {
	id "me.modmuss50.mod-publish-plugin" version "1.1.0"
	id 'fabric-loom' version "${loom_version}"
	id 'maven-publish'
	id 'scala'
	id "com.diffplug.spotless" version "7.0.4"
}

base {
	archivesName = project.archives_base_name
}

def ENV = System.getenv()

group = project.maven_group
def detected_scala_version = ENV.SCALA3_VERSION ?: project.scala_version
version = mod_version + "+scala." + detected_scala_version

System.out.println("Building with Scala3: ${detected_scala_version}")

dependencies {
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"

	compileOnly 'org.projectlombok:lombok:1.18.32'
	annotationProcessor 'org.projectlombok:lombok:1.18.32'

	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"

	include(api("org.scala-lang:scala3-library_3:${detected_scala_version}"))
	include(api("org.scala-lang:scala-library:2.13.12"))
}

processResources {
	inputs.property "version", project.version

	filesMatching("fabric.mod.json") {
		expand "version": project.version
	}
}

tasks.withType(JavaCompile).configureEach {
	it.options.release = 8
}

java {
	withSourcesJar()

	sourceCompatibility = JavaVersion.VERSION_1_8
	targetCompatibility = JavaVersion.VERSION_1_8
}

jar {

	inputs.property "archivesName", project.base.archivesName

	from("LICENSE") {
		rename { "${it}_${inputs.properties.archivesName}"}
	}
}


tasks.withType(GenerateModuleMetadata).configureEach {
	enabled = false
}

publishing {
	publications {
		mavenJava(MavenPublication) {
			groupId = project.group
			artifactId = project.name
			version = version
			artifact(tasks.jar)
			from components.java
		}
	}

	repositories {
		if (ENV.MAVEN_URL) {
			maven {
				url ENV.MAVEN_URL
				credentials {
					username ENV.MAVEN_USERNAME
					password ENV.MAVEN_PASSWORD
				}
			}
		}
	}
}

spotless {

	groovyGradle {
		target '*.gradle'
		greclipse()
	}

	java {
		importOrder()
		removeUnusedImports()
		eclipse()
		formatAnnotations()
	}
}

publishMods {
	file = remapJar.archiveFile
	type = STABLE
	modLoaders.add("fabric")
	changelog= "Build with Scala3: ${detected_scala_version}"

	modrinth {
		minecraftVersionRange {
			start = "1.14"
			end = "latest"
			includeSnapshots = true
		}
		projectId = "Ptd0Ha1s"
		accessToken = providers.environmentVariable("MODRINTH_TOKEN")
	}

	github {
		repository = "TheDrawingCoder-Gamer/bulby-language-scala"
		accessToken = providers.environmentVariable("GITHUB_TOKEN")
		commitish = "krysztal"
		tagName = version
	}

	// curseforge {
	// 	projectId = "999484"
	// 	accessToken = providers.environmentVariable("CURSEFORGE_TOKEN")
	// 	minecraftVersionRange {
	// 		start = "1.17"
	// 		end = "latest"
	// 	}
	// }
}
